fix: RconClient illegal forward reference error